CTR: Update CONCRETE_STEPS list for all step contracts